fixed spacing

--- a/frontend/src/styles/footer.scss
+++ b/frontend/src/styles/footer.scss
@@ -12,6 +12,9 @@
     transition: 0.25s;
     margin-bottom: 2rem;
     line-height: 1.25rem;
+    key {
+      margin: 0 0.25rem;
+    }
   }
 
   #supportMeButton {
